Made userId optional in sync endpoint
